Changelog
=========

2.5 - unreleased
----------------

- Added tests for language in-/dependent reference fields.
  [hannosch]

- Allow the query keys which prevent the automatic addition of the language to
  catalog queries be configured through a NOFILTERKEYS list in config.
  [hannosch]

2.4 - Dec 9, 2008
-----------------

- Removed `Language settings` from the `Translate into` menu. A global action
  has no place in a context specific menu.
  [hannosch]

- Remove the useless 'changeLanguage' script. In
  'manage_translations_form', use '@@translate' instead.
  [nouri]

- Allow 'id' to be passed to addTranslation/createTranslation.
  [nouri]

2.3 - Nov 13, 2008
------------------

- Registered NoCopyReferenceAdapter for translationOf relations on
  iterate checkout to avoid the checked out object becoming the
  translation.
  [tesdal]

- Fixed unneeded AlreadyTranslated exception during a schema update.
  A schema update saves the current value, sets the default language
  (at which point there can easily be two English translations if that
  is the default language) and restores the original value again. So
  really there is no reason for doing anything other than setting the
  value in that case.
  [maurits]

- addTranslation now returns the newly created translation.
  [wichert]

- Include the FAQ in the package description.
  [wichert]

- Refactor addTranslation: introduce adapters to determine where
  a translation should be created and to create the translation. 
  [wichert]

- Add path filter in catalog view, like the non-LP version has.
  [mj]

- Ensure that translations are reindexed when processing an edit form;
  language independent fields may have been updated.
  [mj]

- Extracted ILanguageIndependentFields adapter, encapsulating the
  synchronization of language independent fields.
  [stefan]


2.2 - July 22, 2008
-------------------

- LanguageIndependent fields are now shown in view mode for the translations,