@@ -1,5 +1,7 @@
 from zLOG import LOG, INFO
 
+from Products.Archetypes.Field import ReferenceField
+
 GLOBALS = globals()
 PKG_NAME = "LinguaPlone"
 SKIN_NAME = "LinguaPlone"
@@ -14,11 +16,6 @@ DEBUG = 0  ## See debug messages
 # If true the global request patch should be applied.
 GLOBAL_REQUEST_PATCH = 1
 
-# I18N-aware reference tool will look up the correct translation when you look
-# up a reference, unless you ask the tool not to.
-# Only use if you understand the implications.
-I18NAWARE_REFERENCE_TOOL = 0
-
 # With cache translations, getCanonical() and getTranslations() will be cached.
 # However, it might lead to read inconsistencies between threads and ZEO clients
 CACHE_TRANSLATIONS = 0
@@ -28,6 +25,7 @@ CACHE_TRANSLATIONS = 0
 # Language='all' keyword.
 I18NAWARE_CATALOG = 1
 NOFILTERKEYS = ['Language', 'UID', 'id', 'getId']
+I18NAWARE_REFERENCE_FIELDS = [ReferenceField, ]
 
 # When auto-notification is enabled, editing the canonical translation object
 # will automatically invalidate all translations.
