@@ -77,11 +77,15 @@ class TestLanguageIndependentFields(LinguaPloneTestCase.LinguaPloneTestCase):
         self.assertEqual(english.getReferenceDependent().UID(), target.UID())
         self.assertEqual(german.getReferenceDependent(), None)
 
-        # But the language independent field should now point to the
-        # translation of the target
+        # It would be nice if the language independent field would now
+        # point to the translation of the target, but this isn't easy to do
+        # Neither the canonical or any translation of the content type with
+        # the reference will actually be changed at this point. So we would
+        # need to check on translation creation if the canonical is referenced
+        # by any item and update those. This is a potential performance
+        # nightmare, so we won't do it now
         self.assertEqual(english.getReference().UID(), target.UID())
-        # XXX This needs to change
-        # self.assertEqual(german.getReference().UID(), target_german.UID())
+        self.assertEqual(german.getReference().UID(), target.UID())
 
         # If we clear the reference, there should be no link left
         english.setReferenceDependent(None)
@@ -105,11 +109,12 @@ class TestLanguageIndependentFields(LinguaPloneTestCase.LinguaPloneTestCase):
 
         english.setReference(target2.UID())
         self.assertEqual(english.getReference().UID(), target2.UID())
-        # XXX This needs to change
-        # self.assertEqual(german.getReference().UID(), target2_german.UID())
+        self.assertEqual(german.getReference().UID(), target2_german.UID())
 
         # If we delete the referenced item, it should no longer be referenced
+        self.folder._delObject(target_german.getId())
         self.folder._delObject(target.getId())
+        self.folder._delObject(target2_german.getId())
         self.folder._delObject(target2.getId())
 
         self.assertEqual(english.getReferenceDependent(), None)
