@@ -4,6 +4,15 @@ Changelog
 2.5 - unreleased
 ----------------
 
+- Added smarter handling of language independent reference fields. If a
+  language independent reference field points to a target, the translations of
+  that source item will point to the translations of the target and not the
+  canonical target. This will only work if the translations of the target
+  already exist once the reference is established. If translations of the
+  target are later added, the canonical source needs to be saved again to
+  adjust the references to the right translation of the target.
+  [hannosch]
+
 - Added tests for language in-/dependent reference fields.
   [hannosch]
 
